# wasm-template

./: Cargo.toml  README.md  build.bash  package-lock.json  package.json  rollup.config.js  tsconfig.json
public/: index.html
site-src/: App.svelte  wasm-worker.js
site-src/lib/: Canvas.svelte
src/: lib.rs
