[package]
name = "wasm-template"
version = "0.1.0"
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen-rayon = { version = "1.0.3", optional = true }
wasm-bindgen = "0.2.81"
rayon = { version = "1.5", optional = true }

[features]
default = ["parallel"]
parallel = ["rayon", "wasm-bindgen-rayon"]

[toolchain]
channel = "nightly"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
